@@ -7,22 +7,22 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.16 (gritter) 11/14/06";
+	"@(#)/usr/ucb/otfdump.sl	8.17 (gritter) 11/14/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.16 (gritter) 11/14/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.16 (gritter) 11/14/06";
+static const char sccsid[] USED = "@(#)dpost.sl  8.17 (gritter) 11/14/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.17 (gritter) 11/14/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.16 (gritter) 11/14/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.17 (gritter) 11/14/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.16 (gritter) 11/14/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.17 (gritter) 11/14/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.16";
+const char revision[] = "8.17";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.102 (gritter) 11/5/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.136 (gritter) 11/13/06
-n2.c: * Sccsid @(#)n2.c	1.41 (gritter) 11/13/06
+n2.c: * Sccsid @(#)n2.c	1.42 (gritter) 11/14/06
 n3.c: * Sccsid @(#)n3.c	1.178 (gritter) 11/13/06
 n4.c: * Sccsid @(#)n4.c	1.96 (gritter) 11/12/06
 n5.c: * Sccsid @(#)n5.c	1.121 (gritter) 11/13/06
